2311: Use getLast and removeLast methods for lists
Reviewed-by: zsong, erikj