@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -965,7 +965,7 @@ class SponsorTests {
 
             TestBotRunner.runPeriodicItems(mergeBot);
 
-            assertTrue(pr.comments().get(pr.comments().size() - 1).body()
+            assertTrue(pr.comments().getLast().body()
                     .contains("can only be used in open pull requests"));
         }
     }
